# chip-8

./: .gitignore  Cargo.toml  README.md
src/: consts.rs  cpu.rs  emulator.rs  keyboard.rs  main.rs  ram.rs  screen.rs  timer.rs
